--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </p>
             <p class="Tema">6. Juntos a la Par (Pappo)</p>
             <p class="alumnos">
-                <b>VOCES:</b> Fernando Covello/ <B>GUITARRAS:</B> Tomas Suarez, Franco Ortega, Laureano Roldan/ <B>ARMONICA:</B> Luciano Centurión/ <B>TECLADOS:</B> Marcos Morguillo, Juan Maffei/ <B>BAJO:</B> Juan Maggio/ <B>BATERIA:</B> 
+                <b>VOCES:</b> Fernando Covello/ <B>GUITARRAS:</B> Tomas Suarez, Franco Ortega, Laureano Roldan, Ciro Faramiñan/ <B>ARMONICA:</B> Luciano Centurión/ <B>TECLADOS:</B> Marcos Morguillo, Juan Maffei/ <B>BAJO:</B> Juan Maggio/ <B>BATERIA:</B> 
             </p>
             <p class="Tema">7. Que Ves (Divididos)</p>
             <p class="alumnos">
@@ -76,7 +76,7 @@
             </p>
             <p class="Tema">11. Tan Solo (Los Piojos)</p>
             <p class="alumnos">
-                <B>VOCES:</B> Fernando Covello, Fernando Flores/ <B>GUITARRAS:</B> Bianca Inostroza, Benicio Framarini, Micaela Frey/ <B>BAJO:</B> Fernando Flores/ <B>TECLADO:</B> Roland Casanova/ <B>ARMONICA:</B> Martin Busso/ <b>BATERIA</b> Luca Cardone
+                <B>VOCES:</B> Fernando Covello, Fernando Flores/ <B>GUITARRAS:</B> Bianca Inostroza, Benicio Framarini, Micaela Frey/ <B>BAJO:</B> Fernando Flores/ <B>TECLADO:</B> Roland Casanova, Santiago Rodriguez/ <B>ARMONICA:</B> Martin Busso/ <b>BATERIA</b> Luca Cardone
             </p>
             <p class="Tema">12. 11 y 6 (Fito Páez)</p>
             <p class="alumnos">
@@ -96,12 +96,65 @@
             </p>
             <p class="Tema">16. En la Ciudad de la Furia (Soda Stereo)</p>
             <p class="alumnos">
-                <B>VOCES:</B> Emma Diaz/ <B>GUITARRAS:</B> Franco Ortega, Bautista Santillán, Andrea Canelón, Laureano Roldan, Nicole Zimmer/ <B>TECLADOS:</B> Juan Maffei, Dolores Coronel, Juliana Sosa/ <B>BAJO:</B> Tatiana Ullua, Miguel Varas/ <B>BATERIA:</B> Agustín Font, Micaela Frey
+                <B>VOCES:</B> Emma Diaz/ <B>GUITARRAS:</B> Franco 0Ortega, Bautista Santillán, Andrea Canelón, Laureano Roldan, Nicole Zimmer, Ciro Faramiñan, Tomas Irure/ <B>TECLADOS:</B> Juan Maffei, Dolores Coronel, Juliana Sosa/ <B>BAJO:</B> Tatiana Ullua, Miguel Varas/ <B>BATERIA:</B> Agustín Font, Micaela Frey
             </p>
             <p class="Tema">17. Prófugos (Soda Stereo)</p>
             <p class="alumnos">
                 <B>VOCES:</B> Emma Diaz/ <B>GUITARRAS:</B> Juan Maggio, Melanie Frey, Micaela Frey/ <B>TECLADOS:</B> Liz Muñoz, Marcos Morguillo, Juan Maffei/ <B>BAJO:</B> Fernando Flores/ <b>BATERIA:</b> Gonzalo Diaz, Agustín Font
             </p>
+            <p class="Tema">18. El Tesoro (El Mato a un Policía Motorizado)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Adrián Cordero, Priscila Gamero/ <b>GUITARRA:</b> Juan Maggio/ <b>TECLADO:</b> Marcos Morguillo/ <b>BAJO:</b> Miguel Varas/ <b>BATERIA:</b> Alma González
+            </p>
+            <p class="Tema">19. Buenos Aires (Nathy Peluso)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Emma Diaz, Mariángel Velásquez, Trinidad Palacios/ <B>GUITARRA:</B> Juan Maggio/ <b>TECLADO:</b> Juliana Sosa/ <b>BAJO:</b> Benjamín Mayer/ <b>BATERIA:</b>
+            </p>
+            <p class="Tema">20. Rezo Por Vos (Charly García)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Adrián Cordero, Elisa Closs/ <B>GUITARRAS:</B> Benicio Framarini, Ciro Venegas, Miriam Figueroa/ <B>TECLADOS:</B> Juliana Sosa, Marcos Morguillo, Fermín Corbalán/ <b>BAJO:</b> Lola Rueda/ <b>BATERIA:</b> Belén Savala, Juana Gutiérrez
+            </p>
+            <p class="Tema">21. Back to Black (Amy Winehouse)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Trinidad Palacios, Ana Lourdes Vega, Emma Diaz/ <B>GUITARRAS:</B> Mónica Madrid, Andrea Canelo, Alen Quiroga/ <B>SAXO:</B> Gabriel Jorquera/ <B>TECLADOS:</B> Manuel Gibezzi, Juliana Sosa, Brenda Sepúlveda/ <b>BAJO:</b> Melanie Frey/ <b>BATERIA:</b> Gonzalo Diaz
+            </p>
+            <p class="Tema">22. Zombie (The Cranberries)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Emma Diaz, Elisa Closs/ <B>GUITARRA</B> Ignacio Rueda/ <B>BAJO:</B> Mila Jankowski/ <B>BATERIA:</B> Alma González, Gonzalo Diaz/ <b>TECLADOS:</b> Alice Crespo, Valentina Campolo, Roland Casanova
+            </p>
+            <p class="Tema">23. Have You Even Seen The Rain (Creedence Clearwater Revival)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Elisa Closs, Emma Diaz/ <B>ARMONICA:</B> Martin Busso/ <B>PIANO:</B> Roland Casanova/ <b>BAJO:</b> Fernando Flores
+            </p>
+            <p class="Tema">24. Isn’t She Lovely (Stevie Wonder)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Emma Diaz, Elisa Closs/ <B>ARMONICA:</B> Luciano Centurión/ <B>GUITARRA:</B> Juan Maggio/ <B>TECLADOS:</B> Juliana Sosa, Liz Muñoz, Manuel Gibezzi/ <B>BAJO:</B> Miguel Varas, Benjamín Mayer/ <b>BATERIA:</b> Emiliano Diluca
+            </p>
+            <p class="Tema">25. Blues Local (Pappo’s Blues)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Ciro Venegas/ <B>GUITARRAS:</B> / <B>ARMONICA:</B> Luciano Centurión/ <B>SAXO:</B> Gabriel Jorquera/ <B>BAJO:</B> Melanie Frey/ <b>BATERIA:</b> Nicolas Ratti
+            </p>
+            <p class="Tema">26. Post Crucifixion (Pescado Rabioso)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Sebastián Laverne, Tomas Irure / <B>GUITARRA:</B> Sebastián Laverne, Tomas Irure/ <B>ARMONICA:</B> Luciano Centurión/ <B>BAJO:</B> Ciro Venegas/ <B>TECLADO:</B> Francisco Hernández/ <b>BATERIA:</b> Nicolas Ratti
+            </p>
+            <p class="Tema">27. Lamento Boliviano (Enanitos Verdes)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Mariángel Velásquez, Ana Lourdes Vega/ <B>GUITARRA:</B> Juan Maggio/ <B>TECLADO:</B> Roland Casanova, Juan Maffei/ <B>BAJO:</B> Franccesca Villanueva, Fernando Flores/ <B>BATERIA:</B> Agustín Font
+            </p>
+            <p class="Tema">28. Luna de Miel (Virus)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Adrián Cordero/ <B>GUITARRAS:</B> Melanie Frey, Tomas Irure/ <B>BATERIA:</B> Agustín Font, Simón Mantilaro/ <B>BAJO:</B> Benjamín Mayer/ <b>TECLADOS:</b> Marcos Morguillo, Lucas Almeyra, Brenda Sepúlveda
+            </p>
+            <P class="Tema">29. Tu Falta de Querer (Mon Laferte)</P>
+            <p class="alumnos">
+                <B>VOCES:</B> Mariángel Velásquez, Mónica Madrid, Paloma Gutiérrez/ <B>GUITARRA:</B> Juan Maggio, Bianca Inostroza, Ciro Venegas, Micaela Frey, Miriam Figueroa/ <B>TECLADO:</B> Gabriel Aquino, Lucas Almeyra, Juliana Sosa/ <B>SAXO:</B> Gabriel Jorquera/ <B>BAJO:</B> Tatiana Ullua/ <b>BATERIA:</b> Melanie Frey
+            </p>
+            <p class="Tema">30.	Inocente/Moliendo Café/Lágrimas Negras (Popurrí de Cierre)</p>
+            <p class="alumnos">
+                <B>VOCES:</B> Adrián Cordero, Claudia Kelly, Priscila Gamero / <B>ACORDEON:</B> Daniela Holzmann/ <B>PIANO:</B> Adrián Cordero/
+            </p>
+            <hr id="barra1">
         </div>
     </section>
 
