--- a/index.html
+++ b/index.html
@@ -157,6 +157,80 @@
             <hr id="barra1">
         </div>
     </section>
-
+    <div class="Cronograma">
+        <p id="cronograma"><b>Nos Auspician</b></p>
+    </div>
+    <section id="sponsors">
+        <div class="aus">
+            <a href="">
+                <img src="sponsors/tdmus blanco.png" alt="Todo Musica" width="200px">
+            </a>
+            <a href="">
+                <img src="sponsors/casa bonelli blanco.png" alt="Casa Bonelli" width="150px">
+            </a>
+        </div>
+        <div class="aus">
+            <a href="">
+                <img src="sponsors/universa blanco.png" alt="Universa" width="200px">
+            </a>
+            <a href="">
+                <img src="sponsors/nair azlan.png" alt="Nair Azlan" width="200px">
+            </a>
+        </div>
+        <div class="aus">
+            <a href="">
+                <img src="sponsors/hom sushi blanco.png" alt="HOM SUSHI" width="200px">
+            </a>
+            <a href="">
+                <img src="sponsors/nuevo caminante blanco.png" alt="HOTEL NUEVO CAMINANTE" width="150px">
+            </a>
+        </div>
+        <div class="aus">
+            <a href="">
+                <img src="sponsors/klover2.png" alt="KLOVER" width="200px">
+            </a>
+            <a href="">
+                <img src="sponsors/macedonia.png" alt="Macedonia Market" width="200px">
+            </a>
+        </div>
+        <div class="aus">
+            <a href="">
+                <img src="sponsors/aquaquen blanco.png" alt="Aquaquen" width="200px">
+            </a>
+            <a href="">
+                <img src="sponsors/manolo blanco.png" alt="Lo de Manolo" width="150px">
+            </a>
+        </div>
+        <div class="aus">
+            <a href="">
+                <img src="sponsors/glow blanco.png" alt="Glow" width="180px">
+            </a>
+            <a href="">
+                <img src="sponsors/mix laser blanco.png" alt="Mixlaser" width="200px">
+            </a>
+        </div>
+        <div class="aus">
+            <a href="">
+                <img src="sponsors/domoganesha blanco.png" alt="DOMOGANESHA" width="150px">
+            </a>
+            <a href="">
+                <img src="sponsors/ormus patagoniaa blanco.png" alt="ORMUS PATAGONIA" width="200px">
+            </a>
+        </div>
+        <div class="aus">
+            <a href="">
+                <img src="sponsors/torneria blanco.png" alt="Torneria San Sebastian" width="200px">
+            </a>
+            <a href="">
+                <img src="sponsors/h y e blanco.png" alt="H&E Soluciones Tecnicas" width="150px">
+            </a>
+        </div>
+    </section>
+    <hr>
+    <footer>
+        <img src="img/disco.png" alt="">
+        <p>Vintage, Taller Integral de Musica</p>
+        <p>2024</p>
+    </footer>
 </body>
 </html>
