--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
             <p class="Tema">2. Flaca (Andrés Calamaro)</p>
             <p class="alumnos">
-                <b>VOCES:</b> Claudia Kelly, Ana Lourdes Vega/ <b>GUITARRAS:</b> Benicio Framarini, Mónica Madrid/ <b>BAJO:</b> Lola Rueda, Franccesca Villanueva/ <B>SAXO:</B> Walter Escares/ <B>TECLADOS:</B> Alice Crespo, Fermín Corbalán, Liz Muñoz/ <B>BATERIA:</B> Belén Sevala, Micaela Frey
+                <b>VOCES:</b> Claudia Kelly, Ana Lourdes Vega/ <b>GUITARRAS:</b> Benicio Framarini, Mónica Madrid, Sebastian Laverne/ <b>BAJO:</b> Lola Rueda, Franccesca Villanueva/ <B>SAXO:</B> Walter Escares/ <B>TECLADOS:</B> Alice Crespo, Fermín Corbalán, Liz Muñoz/ <B>BATERIA:</B> Belén Sevala, Micaela Frey
             </p>
             <p class="Tema">3. Té para Tres (Soda Stereo)</p>
             <p class="alumnos">
@@ -52,7 +52,7 @@
             </p>
             <p class="Tema">5. Seguir Viviendo Sin Tu Amor (Spinetta)</p>
             <p class="alumnos">
-                <B>VOCES:</B> Adrián Cordero, Emma Diaz/ <B>VIOLINES:</B> Carla Fernández, Emma Fuentes, Fernando Flores, Nicolas Rosas, Patricia Recchia/ <B>GUITARRAS:</B> Melanie Frey, Ezequiel Fuentes/ <B>BAJO:</B> Franccesca Villanueva/ <B>TECLADOS:</B> Felipe Poloni, Liz Muñoz, Fermín Corbalán/ <b>BATERIA:</b> Simón Mantilaro, Carmelo Mantilaro
+                <B>VOCES:</B> Adrián Cordero, Emma Diaz/ <B>VIOLINES:</B> Carla Fernández, Emma Fuentes, Fernando Flores, Nicolas Rosas, Patricia Recchia/ <B>GUITARRAS:</B> Melanie Frey, Ezequiel Fuentes, Sebastian Laverne/ <B>BAJO:</B> Franccesca Villanueva/ <B>TECLADOS:</B> Felipe Poloni, Liz Muñoz, Fermín Corbalán/ <b>BATERIA:</b> Simón Mantilaro, Carmelo Mantilaro
             </p>
             <p class="Tema">6. Juntos a la Par (Pappo)</p>
             <p class="alumnos">
@@ -96,7 +96,7 @@
             </p>
             <p class="Tema">16. En la Ciudad de la Furia (Soda Stereo)</p>
             <p class="alumnos">
-                <B>VOCES:</B> Emma Diaz/ <B>GUITARRAS:</B> Franco 0Ortega, Bautista Santillán, Andrea Canelón, Laureano Roldan, Nicole Zimmer, Ciro Faramiñan, Tomas Irure/ <B>TECLADOS:</B> Juan Maffei, Dolores Coronel, Juliana Sosa/ <B>BAJO:</B> Tatiana Ullua, Miguel Varas/ <B>BATERIA:</B> Agustín Font, Micaela Frey
+                <B>VOCES:</B> Emma Diaz/ <B>GUITARRAS:</B> Franco Ortega, Bautista Santillán, Andrea Canelón, Laureano Roldan, Nicole Zimmer, Ciro Faramiñan, Tomas Irure/ <B>TECLADOS:</B> Juan Maffei, Dolores Coronel, Juliana Sosa/ <B>BAJO:</B> Tatiana Ullua, Miguel Varas/ <B>BATERIA:</B> Agustín Font, Micaela Frey
             </p>
             <p class="Tema">17. Prófugos (Soda Stereo)</p>
             <p class="alumnos">
